--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,5 +3,7 @@
     "paths": {
       "@/*": ["./src/*"]
     }
-  }
+  },
+  "include": ["next-env.d.js", "**/*.js", "**/*jsx"],
+  "exclude": ["node_modules"]
 }
