--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.js", "**/*.js", "**/*jsx"],
-  "exclude": ["node_modules"]
+  "include": ["next-env.d.js", "**/*.js", "**/*jsx"]
 }
