--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "assets:destroy": "npx tsx assets.seeds.js -d"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "mongoose": "^8.2.0",
     "next": "15.0.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
-    "dotenv": "^16.4.5",
-    "mongoose": "^8.2.0"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "eslint": "^8",
